feat: logout 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>EchoEco</title>
 </head>
 <body>
-index
+<div th:if = "${userName != null}">
+    <div th:text="|안녕하세요 ${userName}님|"></div>
+    <form action="/logout" method="post">
+        <button type="submit">로그아웃</button>
+    </form>
+</div>
+<div th:if = "${userName == null}">
+    <button onclick="location.href='/user/login'" style="font-size: 17px">
+        로그인
+    </button>
+</div>
+
+
 </body>
 </html>
