--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login Page</title>
+    <meta charset="UTF-8">
+    <title>Login Page</title>
 
 </head>
 <body>
 <div>
+
   <div>
     <div>
       <h5>ECHO-ECO LOGIN</h5>
@@ -15,6 +16,9 @@
       </button>
       <button onclick="location.href='/oauth2/authorization/naver'" style="font-size: 17px">
         네이버 로그인
+      </button>
+      <button onclick="location.href='/oauth2/authorization/kakao'" style="font-size: 17px">
+        카카오 로그인
       </button>
     </div>
   </div>
