creature create read 페이지 완료 및 detail 페이지 작업중

--- a/src/main/resources/templates/admin/question/create.html
+++ b/src/main/resources/templates/admin/question/create.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default}" lang="">
 <th:block layout:fragment="script">
-    <script th:src="@{/js/admin/create.js}"></script>
+    <script th:src="@{/js/admin/question/create.js}"></script>
 </th:block>
 <body>
 <div layout:fragment="content">
