--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -12,6 +12,12 @@
     <form action="/logout" method="post">
         <button type="submit">로그아웃</button>
     </form>
+    <button onclick="location.href='/users'" style="font-size: 17px">
+        유저 리스트
+    </button>
+    <button onclick="location.href='/admin'" style="font-size: 17px">
+        어드민 화면으로
+    </button>
 </div>
 <div th:if = "${userName == null}">
     <button onclick="location.href='/user/login'" style="font-size: 17px">
