--- a/src/main/resources/templates/users/updateUserRole.html
+++ b/src/main/resources/templates/users/updateUserRole.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
+<style>
+    img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,7 +16,7 @@
     <div th:text="${userForm.name}"></div>
     <div th:text="${userForm.email}"></div>
     <div>
-        <img th:src="@{${userForm.picture}}">
+        <img th:src="@{${userForm.picture}}" width="70" height="70">
     </div>
 
     <div class="form-group">
