--- a/src/main/resources/templates/admin/creature/read.html
+++ b/src/main/resources/templates/admin/creature/read.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http//www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default}" lang="">
-<!--<th:block layout:fragment="script">-->
-<!--    <script th:src="@{/js/drawing/create.js}"></script>-->
-<!--</th:block>-->
+<th:block layout:fragment="script">
+    <script th:src="@{/js/admin/creature/read.js}"></script>
+</th:block>
 <body>
 <div layout:fragment="content">
     <div class="text-end mb-3" style="margin-left: auto">
@@ -16,30 +16,29 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>
-                        <input class="form-check-input modal-checkbox" type="checkbox" value=""
-                               id="checkboxAll">
-                        <label class="form-check-label" for="checkboxAll"></label>
-                    </th>
                     <th>이름</th>
                     <th>타입</th>
                     <th>최대 레벨</th>
-                    <th>Action</th>
+                    <th>액션</th>
                 </tr>
                 </thead>
-                <tbody class="table-border-bottom-0">
-                <tr>
-                    <td>
-                        <input class="form-check-input modalDrawingCheckbox" type="checkbox" value="" id="modalCheckboxDrawing${index}">
-                        <label class="form-check-label" for="modalCheckboxDrawing${index}"></label>
-                    </td>
-                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>곰</strong></td>
-                    <td><span class="badge bg-label-primary me-1">동물</span></td>
-                    <td>100</td>
-                    <td>
-                        <button type="button" class="btn btn-l btn-primary" onclick="location.href='/admin/creature/create/1'"><strong>Detail 관리하기</strong></button>
-                    </td>
-                </tr>
+                <tbody class="table-border-bottom-0" id="creatureTBody">
+<!--                <tr>-->
+<!--                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>곰</strong></td>-->
+<!--                    <td><span class="badge bg-label-primary me-1">동물</span></td>-->
+<!--                    <td>100</td>-->
+<!--                    <td>-->
+<!--                        <div class="dropdown">-->
+<!--                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">-->
+<!--                                <i class="bx bx-dots-vertical-rounded"></i>-->
+<!--                            </button>-->
+<!--                            <div class="dropdown-menu">-->
+<!--                                <a class="dropdown-item" href="/admin/creature/create/1"><i class="bx bx-edit-alt me-1"></i> 수정하기</a>-->
+<!--                                <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> 삭제하기</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </td>-->
+<!--                </tr>-->
                 </tbody>
             </table>
         </div>
