--- a/src/main/resources/templates/layouts/menu.html
+++ b/src/main/resources/templates/layouts/menu.html
@@ -81,9 +81,15 @@
 
         <!-- Extended components -->
         <li class="menu-item">
-            <a href="/question" class="menu-link">
+            <a href="/admin/question" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-copy"></i>
                 <div data-i18n="Extended UI">문제</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a href="/admin/character" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-crown"></i>
+                <div data-i18n="Boxicons">캐릭터</div>
             </a>
         </li>
 
