--- a/src/main/resources/templates/layouts/menu.html
+++ b/src/main/resources/templates/layouts/menu.html
@@ -92,6 +92,12 @@
                 <div data-i18n="Boxicons">캐릭터</div>
             </a>
         </li>
+        <li class="menu-item">
+            <a href="/admin/character" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-collection"></i>
+                <div data-i18n="basic">배경</div>
+            </a>
+        </li>
 
         <!-- Misc -->
         <li class="menu-header small text-uppercase"><span class="menu-header-text">기타</span></li>
