--- a/src/main/resources/templates/admin/background/read.html
+++ b/src/main/resources/templates/admin/background/read.html
@@ -17,12 +17,13 @@
                 <thead>
                 <tr>
                     <th>이름</th>
-                    <th>타입</th>
-                    <th>최대 레벨</th>
+                    <th>이미지</th>
+                    <th>환경</th>
+                    <th>레벨</th>
                     <th>액션</th>
                 </tr>
                 </thead>
-                <tbody class="table-border-bottom-0" id="characterTBody">
+                <tbody class="table-border-bottom-0" id="backgroundTBody">
 
                 </tbody>
             </table>
