읽기 페이지 구현

--- a/src/main/resources/templates/admin/question/read.html
+++ b/src/main/resources/templates/admin/question/read.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default}" lang="">
 <th:block layout:fragment="script">
-    <script th:src="@{/js/admin/read.js}"></script>
+    <script th:src="@{/js/admin/question/read.js}"></script>
 </th:block>
 <body>
 <div layout:fragment="content">
@@ -22,34 +22,14 @@
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th></th>
                         <th>질문</th>
-                        <th>옵션 1</th>
-                        <th>옵션 2</th>
-                        <th>옵션 3</th>
-                        <th>옵션 4</th>
+                        <th>옵션</th>
                         <th>정답</th>
+                        <th>액션</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td><label><input type="checkbox" class="check-delete"></label></td>
-                        <td>질문</td>
-                        <td>옵션 1</td>
-                        <td>옵션 2</td>
-                        <td>옵션 3</td>
-                        <td>옵션 4</td>
-                        <td>정답</td>
-                    </tr>
-                    <tr>
-                        <td><label><input type="checkbox" class="check-delete"></label></td>
-                        <td>북극의 해빙 감소가 전 세계 기후에 미치는 영향 중 옳지 않은 것은 무엇입니까?</td>
-                        <td>북극 해빙 감소는 해수면 상승에 직접적인 영향을 미친다.</td>
-                        <td>해빙 감소로 인해 북극의 반사율(알베도)이 감소하여 더 많은 태양 에너지가 흡수된다.</td>
-                        <td>해빙 감소는 북극 지역의 기온 상승을 가속화시킨다.</td>
-                        <td>해빙 감소는 전 세계 해양 순환 패턴에 영향을 줄 수 있다.</td>
-                        <td>정답</td>
-                    </tr>
+                    <tbody class="table-border-bottom-0" id="questionTBody">
+
                     </tbody>
                 </table>
             </div>
@@ -61,17 +41,11 @@
                     <li class="page-item">
                         <a class="page-link" href="#">1</a>
                     </li>
-                    <li class="page-item">
+                    <li class="page-item active">
                         <a class="page-link" href="#">2</a>
                     </li>
-                    <li class="page-item active">
+                    <li class="page-item">
                         <a class="page-link" href="#">3</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">4</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">5</a>
                     </li>
                     <li class="page-item next">
                         <a class="page-link" href="#"><i class="tf-icon bx bx-chevrons-right"></i></a>
@@ -80,7 +54,7 @@
             </nav>
         </div>
     </div>
-    <div class="card mb-4">
+<!--    <div class="card mb-4">
         <h5 class="card-header">영상</h5>
         <div class="card-body">
             <div class="mb-3">
@@ -94,7 +68,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
 </body>
 </html>
