Item admin page 구현 - 400오류

--- a/src/main/resources/templates/layouts/menu.html
+++ b/src/main/resources/templates/layouts/menu.html
@@ -93,9 +93,15 @@
             </a>
         </li>
         <li class="menu-item">
-            <a href="/admin/character" class="menu-link">
+            <a href="/admin/background" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-collection"></i>
                 <div data-i18n="basic">배경</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a href="/admin/item" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-collection"></i>
+                <div data-i18n="basic">아이템</div>
             </a>
         </li>
 
