Item admin page 구현 - 400오류

--- a/src/main/resources/templates/admin/background/create.html
+++ b/src/main/resources/templates/admin/background/create.html
@@ -23,7 +23,7 @@
             </div>
             <div class="row demo-vertical-spacing mb-3">
                 <div class="col">
-                    <label for="level" class="col-form-label">이름</label>
+                    <label for="name" class="col-form-label">이름</label>
                     <div>
                         <input class="form-control" type="text" th:value="${background.name}" id="name">
                     </div>
